@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/bin/bash
 
         externel_argument="$1"
 
