@@ -1,10 +1,10 @@
-#!/bin/sh
+#!/usr/local/bin/bash
 
         externel_argument="$1"
 
 	ps_list=$(ps -e)
 	yt_playlist_count=$(echo "$ps_list" | grep yt-playlist | wc -l)
-        if [[ "$yt_playlist_count" -lt 2 ]]
+        if [[ "$yt_playlist_count" -lt 1 ]]
 	then
         if command -v yt-dlp >/dev/null && command -v mpv >/dev/null && command -v ffmpeg >/dev/null && command -v fzf >/dev/null && command -v mutagen-inspect >/dev/null && command -v socat >/dev/null && command -v gawk >/dev/null && command -v gsed >/dev/null && command -v tr >/dev/null && command -v bash >/dev/null && command -v curl >/dev/null && command -v gnl >/dev/null && command -v git >/dev/null && command -v gsleep >/dev/null
         then
@@ -35,6 +35,7 @@
         sudo cp ./yt-playlist /usr/local/bin/
         fi
         sudo chmod +x /usr/local/bin/yt-playlist
+        sudo chown ${USER} /usr/local/bin/yt-playlist
         mkdir -p ${HOME}/.config/
         mkdir -p ${HOME}/.config/yt-playlist/
         mkdir -p ${HOME}/.config/yt-playlist/scripts/
